--- a/deckblatt.tex
+++ b/deckblatt.tex
@@ -34,11 +34,8 @@ Modul WIN03 --- \=Innovative Themen der Wirtschaftsinformatik\\
 				\>Assignment
 \end{tabbing}
 
-Internetdienstleistungen\\
-eines der größten Wachstumsfelder der nächsten Jahre
-
 \LARGE
-\textsc{Intranet der Dinge \\und Ubiquitous Computing}\\
+\textsc{Web 3.0 \\Daten sind das Öl des 21. Jahrhunderts}\\
 
 \vfill
 
