--- a/grundlagen.tex
+++ b/grundlagen.tex
@@ -1,18 +1,33 @@
 \section{Grundlagen}
 \label{sec:grundlagen}
 
-\subsection{Intranet of Things}
-\subsection{Ubiquitous Computing}
-\subsection{M2M}
-\subsection{Service Oriented Architecture}
-\subsection{}
+\subsection{Veredlungsprozess von Öl}
 
-\section{Technologien}
-\label{sec:technologien}
+Rohöl: Finden / Fördern\\
+Raffinerie: Sammeln / Aufbereiten\\
+Anwendung: Verschiedene Ölprodukte, aber auch Kunststoffe, Kaugummi, etc.
 
-\subsection{IP6}
-\subsection{IP6 Autokonfiguration}
-\subsection{QR–Codes}
-\subsection{NFC bzw. RFID}
-\subsection{}
-\subsection{}
+\subsection{Auswirkungen des Öls auf die Wirtschaft des 20. Jahrhunderts}
+
+Für Unternehmen und Verbraucher
+
+\subsection{Definition: Daten, Informartion, Wissen}
+
+\subsection{Semantisches Markup}
+
+Beschreibung der Daten außerhalb der Datei
+
+\subsection{Metadaten}
+
+Beschreibung der Daten in der Datei (z.B. EXIF--Tags)
+
+\subsection{Automatische Informationsgewinnung}
+
+z.B. Gesichtserkennung
+
+\subsection{Automatische Wissensgewinnung}
+
+Durch Verknüpfung von Informationen kann Wissen generiert werden:\\
+Person A ist auf einem Bild zusammen mit Person B zu sehen (Gesichtserkennung). Die Geoinformation und Uhrzeit (EXIF--Tags) zeigen, dass das Foto auf einer Veranstaltung aufgenommen wurde, das zu diesem Zeitpunkt an diesem Ort statt fand (Semantisches Markup der Veranstaltung).
+
+Daraus kann auf politische Gesinnung oder Trinkfreudigkeit von Person A geschlossen werden.
