--- a/hauptteil.tex
+++ b/hauptteil.tex
@@ -1,29 +1,11 @@
-\section{Herausforderungen}
-\label{sec:herausforderungen}
+\section{Auswirkungen des Semantischen Webs auf die Wirtschaft}
 
-\subsection{Dezentrale Datenverarbeitung, Data Warehouse, Big Data}
-\subsection{Konfiguration von Rechten und Prozessen}
-\subsection{Problemspezifische Apps zur verteilten Datenverarbeitung}
-\subsection{Wem gehören die Rechte?}
+\subsection{}
 
-Vorschlag: Meine Daten gehören mir. Die Datensammlung gehört dem Datensammler.
-Siehe auch Kapitel~\myref{sec:autogathering}
+\section{Auswirkungen des Semantischen Webs auf die Gesellschaft}
 
-\section{Potentiale}
-\label{sec:potentiale}
+\subsection{}
 
-\subsection{Appliances++}
-\subsection{Lagerverwaltung++}
-\subsection{Customerservice++}
+\section{Vergleich der Auswirkungen mit denen des Öls}
 
-z.B. Gast morgens an der Rezeption. Das Infoterminal zeigt die Wettervorhersage für den heute gebuchten Ausflug bzw. für den Heimweg an.
-z.B. Gast abends im Zimmer. Der Hotelfernseher zeigt Dokumentation über die unterwegs besuchte Sehenswürdigkeit (Basierend auf tatsächlicher, nicht gebuchter Route).
-
-\subsection{Automatische Datenherausgabe}
-\label{sec:autogathering}
-
-Eine automatisierte Sammlung aller Daten, die über ein \buzz{Thing} gesammelt wurden ermöglicht nicht nur den Datensammlern, sondern auch den Individuen, diese (eigenen) Daten zu nutzen und auszuwerten.
-
-\subsection{Der Mehrwert von „Mehr“ und „Schneller“}
-
-Viele Entwicklung der Informationstechnologie basieren auf gundlegenden Techniken, die schon lange Bekannt sind. z.B: Digitaler Surroudsound basiert auf den gleichen Grundlagen wie 8–Bit Musik aus dem C64. GIF–Animationen basieren auf dem gleichen Prinzip wie Malen nach Zahlen und Daumenkino. Nur eben „mehr“ bzw. „schneller“. 
+\subsection{}
