Datum, Information, Wissen

--- a/einleitung.tex
+++ b/einleitung.tex
@@ -3,11 +3,13 @@
 
 \subsection{Begründung der Problemstellung}
 
-Durch Entwickungen wie \buzz{Internet of Things} und \buzz{Ubiquitous Computing} werden die in naher Zukunft die generierte Datenmenge als auch die Anzahl der verarbeitenden Instanzen in den nächsten Jahren wohl deutlich zunehmen.
+Technologien rund um das Schlagwort \buzz{Big Data} sind laut Gartner die großen Triebfedern in der Informationstechnologie\footnote{vgl. \cite{gartner2014}}. Durch Entwicklungen wie \buzz{Internet of Things} und \buzz{Ubiquitous Computing} werden die in naher Zukunft die generierte Datenmenge als auch die Anzahl der verarbeitenden Instanzen in den nächsten Jahren wohl deutlich zunehmen.
+
+Die steigende Menge der Daten macht eine systematische Aufbereitung der anfallenden Daten hin zu repräsentiertem Wissen möglich und notwendig. Das semantische Web, oder auch \buzz{Web 3.0}, verspricht Struktur in die Datenmenge zu bringen. Die Erwartungen, aber auch die Befürchtungen gegenüber den entsprechenden technischen Fortschritten sind immens.
 
 \subsection{Ziele dieser Arbeit}
 
-\textbf{Ziel dieser Arbeit ist es, die momentanen Entwicklungen der Datenbeständen hin zum semantischen Web und deren auswirkungen auf Wirtschaft und Gesellschaft mit den durch die Entdeckung des Öls im 20. Jahrhundert zu vergleichen.}
+\textbf{Ziel dieser Arbeit ist es, die momentanen Entwicklungen der Datenbeständen hin zum semantischen Web und deren Auswirkungen auf Wirtschaft und Gesellschaft mit den durch die Industrielle Nutzung des Öls im 20. Jahrhundert zu vergleichen.}
 
 Hierzu werden zunächst im Kapitel~\myref{sec:grundlagen} die für diese Arbeit relevanten Begriffe und Konzepte definiert, bevor im Kapitel~\myref{sec:technologien} die momentan verfügbaren Technologien genannt und erklärt werden. 
 
@@ -16,5 +18,7 @@ Darauf aufbauend werden im Kapitel~\myref{sec:herausforderungen} die technischen
 \todo{An die tatsächliche Arbeit anpassen}
 
 \subsection{Abgrenzung}
+
+Der Augenmerk dieser Arbeit liegt auf den behandelten Konzepten und Technologien der Informationstechnologie. Die Entsprechungen in der Ölindustrie werden nicht in der gleichen Tiefe erörtert und belegt werden, sondern beschränken sich auf generelle Aussagen und Ansichten.
 
 \todo{An die tatsächliche Arbeit anpassen}
