--- a/einstellungen.tex
+++ b/einstellungen.tex
@@ -28,7 +28,7 @@
 %% Abbildungsverzeichnis 
 %\listoffigurestrue
 %% Tabellenverzeichnis
-%\listoftablestrue
+\listoftablestrue
 %% Abkürzungsverzeichnis
 %\acronymtrue
 
