--- a/grundlagen.tex
+++ b/grundlagen.tex
@@ -1,19 +1,26 @@
 \section{Grundlagen}
 \label{sec:grundlagen}
 
-\subsection{Veredlungsprozess von Öl}
+\subsection{Betrachtung von Erdöl}
 
-Rohöl: Finden / Fördern\\
-Raffinerie: Sammeln / Aufbereiten\\
-Anwendung: Verschiedene Ölprodukte, aber auch Kunststoffe, Kaugummi, etc.
+Bei Erdöl handelt es sich um den wichtigsten Energieträger seit der zweiten Hälfte des 20. Jahrhunderts bis hin zur Gegenwart. Durch Erdöl wurden viele technologische Entwicklungen begünstigt oder gar erst möglich gemacht. Neben den offensichtlichen Anwendungen wie die Nutzung als Kraftstoff für Mobilität oder zur Wärmegewinnung gibt es viele weitere Anwendungen, ohne die die moderne Gesellschaft nur schwer vorstellbar wäre: Kunststoffe und Lacke basieren zum großen Teil auf Erdöl.
 
-\subsection{Auswirkungen des Öls auf die Wirtschaft des 20. Jahrhunderts}
+Viele der genannten Anwendungen wurden jedoch erst durch die systematische Aufbereitung des Rohöls in Raffinerien möglich. Der große wirtschaftliche Durchbruch kam durch die Nutzung als Treibstoff für die Automobile. Andererseits ermöglichten Erdölprodukte wie Benzin, Kerosin oder Diesel durch ihre hohe Energiedichte die umfassende Verfügbarkeit von individuellem Transport.
 
-Für Unternehmen und Verbraucher
+Die Wertschöpfungskette rund um Erdöl gliedert sich in die Phasen des Finden bzw. Förderns, des Sammelns bzw. Aufbereitens und in die anschließende Nutzung in diversen Endprodukten, vom Treibstoff bis hin zu diversen Kunsstoffen.
+Dabei gilt, dass Erdöl zwar in großen Mengen, aber nicht unbegrenzt zur Verfügung steht. 
 
-\subsection{Definition: Daten, Informartion, Wissen}
+Die Auswirkungen des Erdöls auf Technologie, Wirtschaft, Gesellschaft und Politik des 20. Jahrhunderts sind enorm. Erdöl ermöglichte großen Reichtum von Unternehmen und Staaten, aber verursachte auch Krisen und Kriege.
 
-\subsection{Semantisches Markup}
+\subsection{Definition: Daten, Information, Wissen}
+
+In dieser Arbeit sollen die folgenden Definitionen gelten: Ein \buzz{Datum} ist eine formalisierte Sachverhaltsaussage, ohne inhärente Bedeutung (z.B. „23“). Durch eine Interpretation im Kontext kann daraus eine \buzz{Information} werden (z.B. „Die Außentemperatur beträgt 23°C“)\footnote{vgl. \cite{kfk}, Seite 40}. Durch Vernetzung mehrerer Informationen miteinander, aber auch durch Erfahrung kann \buzz{informatives Wissen} entstehen (z.B. „Das Wetter ist schön“)\footnote{vgl. \cite{pnik}, Seite 106}. 
+
+In weiteren Verfeinerungsschritt entsteht dann \buzz{handlungsorientiertes Wissen}, (z.B. „Ich benötige beim Nachmittagsspaziergang keinen Pullover“) das dann zu einer konkreten Entscheidung führen kann (z.B. „Ich lasse den Pullover zu Hause.“)\footnote{vgl. \cite{taylor}, Seite 342}.
+
+\subsection{Definition: Web 1.0, Web 2.0}
+
+\subsection{Semantisches Markup, Web 3.0}
 
 Beschreibung der Daten außerhalb der Datei
 
