Web 1.0 und Web 2.0

--- a/einstellungen.tex
+++ b/einstellungen.tex
@@ -28,9 +28,9 @@
 %% Abbildungsverzeichnis 
 %\listoffigurestrue
 %% Tabellenverzeichnis
-\listoftablestrue
+%\listoftablestrue
 %% Abkürzungsverzeichnis
-%\acronymtrue
+\acronymtrue
 
 % Wittwen und Waisen verhindern
 \clubpenalty10000
