--- a/literatur.bib
+++ b/literatur.bib
@@ -2,26 +2,36 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Stefan Waidele at 2014-11-03 22:47:38 +0100 
+%% Created for Stefan Waidele at 2014-11-04 09:36:56 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@book{alkhatib,
+	Author = {Ghazi Alkhatib},
+	Date-Added = {2014-11-04 07:33:43 +0000},
+	Date-Modified = {2014-11-04 07:34:29 +0000},
+	Publisher = {IGI Global},
+	Title = {Models for Capitalizing on Web Engineering Advancements},
+	Year = {2012}}
+
 @article{taylor,
+	Annote = {https://www.asis.org/Publications/JASIS/Best_Jasist/1982Taylor.pdf},
 	Author = {Taylor},
 	Date-Added = {2014-11-03 21:44:34 +0000},
-	Date-Modified = {2014-11-03 21:46:30 +0000},
+	Date-Modified = {2014-11-03 22:17:41 +0000},
 	Journal = {Journal of the American Society for Information Science},
 	Pages = {341--346},
 	Title = {Value--Added Processes in the Information Life Cycle},
 	Year = {1982}}
 
 @book{kfk,
+	Annote = {http://www.wissenschaftsforschung.de/JB00_9-88.pdf},
 	Author = {Klaus Fuchs--Kittowski},
 	Date-Added = {2014-11-03 21:08:55 +0000},
-	Date-Modified = {2014-11-03 21:13:26 +0000},
+	Date-Modified = {2014-11-03 22:16:17 +0000},
 	Edition = {2. Auflage},
 	Publisher = {Gesellschaft f{\"u}r Wissenschaftsforschung},
 	Title = {Wissens--Ko--Produktion --- Organisationsinformatik},
