--- a/grundlagen.tex
+++ b/grundlagen.tex
@@ -3,22 +3,25 @@
 
 \subsection{Betrachtung von Erdöl}
 
-Bei Erdöl handelt es sich um den wichtigsten Energieträger seit der zweiten Hälfte des 20. Jahrhunderts bis hin zur Gegenwart. Durch Erdöl wurden viele technologische Entwicklungen begünstigt oder gar erst möglich gemacht. Neben den offensichtlichen Anwendungen wie die Nutzung als Kraftstoff für Mobilität oder zur Wärmegewinnung gibt es viele weitere Anwendungen, ohne die die moderne Gesellschaft nur schwer vorstellbar wäre: Kunststoffe und Lacke basieren zum großen Teil auf Erdöl.
-
-Viele der genannten Anwendungen wurden jedoch erst durch die systematische Aufbereitung des Rohöls in Raffinerien möglich. Der große wirtschaftliche Durchbruch kam durch die Nutzung als Treibstoff für die Automobile. Andererseits ermöglichten Erdölprodukte wie Benzin, Kerosin oder Diesel durch ihre hohe Energiedichte die umfassende Verfügbarkeit von individuellem Transport.
+Bei Erdöl handelt es sich um den wichtigsten Energieträger des 20. Jahrhunderts bis hin zur Gegenwart. Durch Erdöl wurden viele technologische Entwicklungen begünstigt oder gar erst möglich gemacht. Durch systematische Aufbereitung in Reffinerien sind neben den offensichtlichen Anwendungen wie der Nutzung als Schmier-- und Kraftstoff für Mobilität und Maschinen oder zur Wärmegewinnung sind viele weitere Anwendungen möglich, ohne die die moderne Gesellschaft nur schwer vorstellbar wäre\footnote{z.b. Kunststoffe und Lacke, welche zum großen Teil auf Erdöl basieren, oder auch die Reichweite, die Fahrzeuge wegen der hohen Energiedichte von Benzin bzw. Diesel erzielen.}.
 
 Die Wertschöpfungskette rund um Erdöl gliedert sich in die Phasen des Finden bzw. Förderns, des Sammelns bzw. Aufbereitens und in die anschließende Nutzung in diversen Endprodukten, vom Treibstoff bis hin zu diversen Kunsstoffen.
-Dabei gilt, dass Erdöl zwar in großen Mengen, aber nicht unbegrenzt zur Verfügung steht. 
+Dabei gilt, dass Erdöl zwar in großen Mengen\footnote{Ob diese Mengen, speziell im Vergleich zum weltweiten Verbrauch, tatsächlich immer noch groß sind, wird z.T. bezweifelt}, aber nicht unbegrenzt zur Verfügung steht. 
 
 Die Auswirkungen des Erdöls auf Technologie, Wirtschaft, Gesellschaft und Politik des 20. Jahrhunderts sind enorm. Erdöl ermöglichte großen Reichtum von Unternehmen und Staaten, aber verursachte auch Krisen und Kriege.
 
 \subsection{Definition: Daten, Information, Wissen}
+\label{defwissen}
 
-In dieser Arbeit sollen die folgenden Definitionen gelten: Ein \buzz{Datum} ist eine formalisierte Sachverhaltsaussage, ohne inhärente Bedeutung (z.B. „23“). Durch eine Interpretation im Kontext kann daraus eine \buzz{Information} werden (z.B. „Die Außentemperatur beträgt 23°C“)\footnote{vgl. \cite{kfk}, Seite 40}. Durch Vernetzung mehrerer Informationen miteinander, aber auch durch Erfahrung kann \buzz{informatives Wissen} entstehen (z.B. „Das Wetter ist schön“)\footnote{vgl. \cite{pnik}, Seite 106}. 
+In dieser Arbeit sollen die folgenden Definitionen gelten: Ein \buzz{Datum} ist eine formalisierte Sachverhaltsaussage, ohne inhärente Bedeutung (z.B. „23°C“). Durch Interpretation im Kontext kann daraus eine \buzz{Information} werden (z.B. „Die Außentemperatur beträgt 23°C“)\footnote{vgl. \cite{kfk}, Seite 40}. Durch Vernetzung mehrerer Informationen miteinander, aber auch durch Erfahrung kann \buzz{informatives Wissen} entstehen (z.B. „Das Wetter ist schön“)\footnote{vgl. \cite{pnik}, Seite 106}. 
 
 In weiteren Verfeinerungsschritt entsteht dann \buzz{handlungsorientiertes Wissen}, (z.B. „Ich benötige beim Nachmittagsspaziergang keinen Pullover“) das dann zu einer konkreten Entscheidung führen kann (z.B. „Ich lasse den Pullover zu Hause.“)\footnote{vgl. \cite{taylor}, Seite 342}.
 
 \subsection{Definition: Web 1.0, Web 2.0}
+
+Unter \buzz{Web 1.0} versteht man das \ac{WWW} wie es ursprünglich entwickelt wurde: Eine Menge von statischen Daten, die miteinander auf willkürliche Weise verknüpft werden konnten. Die Auszeichnungssprache \ac{HTML} ermöglicht es Autoren, bestimmte Abschnitte zu kennzeichnen. Schon hier gibt es unterschiedliche Informationsgehalte der Auszeichnungen: Während \code{<b>…</b>} lediglich aussagt, dass der ausgezeichnete Abschnitt in fetter Schriftart angezeigt werden soll, ist eine mit \code{<h1>…</h1>} ausgezeichnete Überschrift tatsächlich als solche zu erkennen. Auch wenn die dadurch gewonnene Information für ein automatisch erstelltes Inhaltsverzeichnis schon nützlich sein kann, wird hier keine Aussage bzgl. des eigentlichen Inhalts getroffen. Somit sind die Dokumente des Web 1.0 dem Bereich der \buzz{Daten} zuzuordnen. Die darin enthaltenen Informationen bzw. das darin enthaltene Wissen ist erst zugänglich, wenn die Daten durch Menschen gelesen und ausgewertet werden\footnote{vgl. \cite{alkhatib}, Seite xvi}.
+
+Durch die Technologien des \buzz{Web 2.0} werden die Daten i.d.R. in Datenbanken vorgehalten und die Webseiten erst bei Abruf generiert. Durch die Popularität von Werkzeugen wie Blogs und Wikis sind deutlich mehr Menschen an der Erstellung der Inhalte beteiligt. Zusätzlich werden diese Daten mit sogenannten \buzz{Meta--Daten} angereichert. Hierdurch wird in maschinenlesbarer Form angegeben, welche Informationen die Dokumente enthalten. Neben vom Autor selbst zugeordneten \buzz{Tags} und \buzz{Kategorien} kommen auch automatisch generierte Meta--Daten hinzu. Beispiele hierfür sind etwa das Veröffentlichungsdatum, Beziehungen zu anderen Dokumenten\footnote{Realisiert durch sog. Backtracks -- Wer verlinkt auf dieses Dokument?} oder Geoinformationen (Wo wurde das Dokument erstellt). Inzwischen werden auch die Stimmung des Autors erfrgt (z.B. bei Runtastic–Aktivitäten) oder ermittelt (z.B. bei Facebookeinträgen). Die durch Daten und Meta--Daten erzielte Informationsstufe ist deutlich über der von \buzz{Web 1.0}, unterliegt aber deutlichen Schwankungen je nach Dienst bzw. Nutzereingaben.
 
 \subsection{Semantisches Markup, Web 3.0}
 
