Web 3.0 - Semantic Web

--- a/grundlagen.tex
+++ b/grundlagen.tex
@@ -21,15 +21,28 @@ In weiteren Verfeinerungsschritt entsteht dann \buzz{handlungsorientiertes Wisse
 
 Unter \buzz{Web 1.0} versteht man das \ac{WWW} wie es ursprünglich entwickelt wurde: Eine Menge von statischen Daten, die miteinander auf willkürliche Weise verknüpft werden konnten. Die Auszeichnungssprache \ac{HTML} ermöglicht es Autoren, bestimmte Abschnitte zu kennzeichnen. Schon hier gibt es unterschiedliche Informationsgehalte der Auszeichnungen: Während \code{<b>…</b>} lediglich aussagt, dass der ausgezeichnete Abschnitt in fetter Schriftart angezeigt werden soll, ist eine mit \code{<h1>…</h1>} ausgezeichnete Überschrift tatsächlich als solche zu erkennen. Auch wenn die dadurch gewonnene Information für ein automatisch erstelltes Inhaltsverzeichnis schon nützlich sein kann, wird hier keine Aussage bzgl. des eigentlichen Inhalts getroffen. Somit sind die Dokumente des Web 1.0 dem Bereich der \buzz{Daten} zuzuordnen. Die darin enthaltenen Informationen bzw. das darin enthaltene Wissen ist erst zugänglich, wenn die Daten durch Menschen gelesen und ausgewertet werden\footnote{vgl. \cite{alkhatib}, Seite xvi}.
 
-Durch die Technologien des \buzz{Web 2.0} werden die Daten i.d.R. in Datenbanken vorgehalten und die Webseiten erst bei Abruf generiert. Durch die Popularität von Werkzeugen wie Blogs und Wikis sind deutlich mehr Menschen an der Erstellung der Inhalte beteiligt. Zusätzlich werden diese Daten mit sogenannten \buzz{Meta--Daten} angereichert. Hierdurch wird in maschinenlesbarer Form angegeben, welche Informationen die Dokumente enthalten. Neben vom Autor selbst zugeordneten \buzz{Tags} und \buzz{Kategorien} kommen auch automatisch generierte Meta--Daten hinzu. Beispiele hierfür sind etwa das Veröffentlichungsdatum, Beziehungen zu anderen Dokumenten\footnote{Realisiert durch sog. Backtracks -- Wer verlinkt auf dieses Dokument?} oder Geoinformationen (Wo wurde das Dokument erstellt). Inzwischen werden auch die Stimmung des Autors erfrgt (z.B. bei Runtastic–Aktivitäten) oder ermittelt (z.B. bei Facebookeinträgen). Die durch Daten und Meta--Daten erzielte Informationsstufe ist deutlich über der von \buzz{Web 1.0}, unterliegt aber deutlichen Schwankungen je nach Dienst bzw. Nutzereingaben.
+Durch die Technologien des \buzz{Web 2.0} werden die Daten i.d.R. in Datenbanken vorgehalten und die Webseiten erst bei Abruf generiert. Durch die Popularität von Werkzeugen wie Blogs und Wikis sind deutlich mehr Menschen an der Erstellung der Inhalte beteiligt. Weitere Daten werden durch Techniken rund um das \buzz{\ac{IoT}} und \buzz{Ubiquitous Computing} automatisch erfasst. Diese Daten mit sogenannten \buzz{Meta--Daten} angereichert. Hierdurch wird in maschinenlesbarer Form angegeben, welche Informationen die Dokumente enthalten. Neben vom Autor selbst zugeordneten \buzz{Tags} und \buzz{Kategorien} kommen auch automatisch generierte Meta--Daten hinzu. Beispiele hierfür sind etwa das Veröffentlichungsdatum, Beziehungen zu anderen Dokumenten\footnote{Realisiert durch sog. Backtracks -- Wer verlinkt auf dieses Dokument?} oder Geoinformationen (Wo wurde das Dokument erstellt). Inzwischen werden auch die Stimmung des Autors erfragt (z.B. bei Runtastic–Aktivitäten) oder ermittelt (z.B. bei Facebook--Einträgen). Die durch Daten und Meta--Daten erzielte Informationsstufe ist deutlich über der von \buzz{Web 1.0}, unterliegt aber deutlichen Schwankungen je nach Dienst bzw. Nutzereingaben.
 
-\subsection{Semantisches Markup, Web 3.0}
+\subsection{Web 3.0 = Web 2.0 + Semantik = Semantisches Web}
 
-Beschreibung der Daten außerhalb der Datei
+„\buzz{Semantik}, auch \buzz{Bedeutungslehre}, nennt man die Theorie oder Wissenschaft von der Bedeutung der Zeichen. Zeichen können in diesem Fall Wörter, Phrasen oder Symbole sein. Die Semantik beschäftigt sich typischerweise mit den Beziehungen zwischen den Zeichen und den Bedeutungen dieser Zeichen.“\footnote{cite{wp:semantik}}
+
+Im \buzz{Web 3.0} werden die Daten bzw. Informationen des Web 2.0 durch Beifügung von Bedeutung zu Information bzw. informativem Wissen veredelt\footnote{vgl. \cite{nyt:markoff}}. Hierdurch soll es möglich werden, die schnell steigenden Datenmengen sinnvoll zu nutzen\footnote{vgl. \cite{tsp:tolksdorf}}. Die Bezeichnung \buzz{semantisches Web} ermöglicht eine Abgrenzung gegenüber anderen Interpretationen des Buzzwords \buzz{Web 3.0}, wie sie z.T. im Marketing\footnote{z.B. „Web 3.0 marketing is the convergence of new technologies and rapidly changing consumer buying trends.“ in \cite{web3market}, Abschnitt „What is Web 3.0 Marketing?“} oder in der Politikwissenschaft\footnote{z.B. „Is this Web 3.0? Not a tech-upgrade, a smarter algorithm, slicker fibre optic or better Bluetooth beam. Instead, Web 3.0 as in an outcome, the demonstrated consequences of being able to access information?“ in \cite{web3pol}, Abschnitt „Web 3.0: Regime Change“} zu finden sind.
+
+\section{Die Bedeutung der Daten}
 
 \subsection{Metadaten}
 
-Beschreibung der Daten in der Datei (z.B. EXIF--Tags)
+zum Zeitpunkt der Erzeugung der Daten
+oder on the fly (Genutzter Plattenplatz, etc.)
+
+entweder in der Datei (EXIF) oder extern .info bei Amiga
+
+Auch Textverarbeitungsdokumente, etc.,
+
+\subsection{Semantisches Markup}
+
+Beschreibung der Daten außerhalb der Datei
 
 \subsection{Automatische Informationsgewinnung}
 
