--- a/literatur.bib
+++ b/literatur.bib
@@ -2,12 +2,64 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Stefan Waidele at 2014-11-04 09:36:56 +0100 
+%% Created for Stefan Waidele at 2014-11-05 20:09:37 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{web3pol,
+	Author = {Simon Pont},
+	Date-Added = {2014-11-05 18:48:56 +0000},
+	Date-Modified = {2014-11-05 18:49:54 +0000},
+	Edition = {Web--Edition},
+	Month = {11},
+	Publisher = {Kogan Page},
+	Title = {The Better Mousetrap},
+	Year = {2012}}
+
+@book{web3market,
+	Author = {Michael Tasner},
+	Date-Added = {2014-11-05 18:39:00 +0000},
+	Date-Modified = {2014-11-05 18:50:01 +0000},
+	Edition = {Web--Edition},
+	Month = {07},
+	Publisher = {FT Press},
+	Title = {The Limiting Factors of Web 2.0 and How Web 3.0 Is Different},
+	Year = {2010},
+	Bdsk-Url-1 = {http://my.safaribooksonline.com/book/sales-and-marketing/9780132487245}}
+
+@misc{tsp:tolksdorf,
+	Author = {Robert Tolksdorf},
+	Date-Added = {2014-11-05 18:26:33 +0000},
+	Date-Modified = {2014-11-05 18:27:32 +0000},
+	Howpublished = {\url{http://www.tagesspiegel.de/zeitung/web-3-0-die-dimension-der-zukunft/1028324.html}, abgerufen am 05.11.2014},
+	Month = {08},
+	Rating = {5},
+	Title = {Web 3.0 -- die Dimension der Zukunft},
+	Year = {2007}}
+
+@misc{nyt:markoff,
+	Author = {John Markoff},
+	Date-Added = {2014-11-05 18:15:13 +0000},
+	Date-Modified = {2014-11-05 18:17:46 +0000},
+	Howpublished = {\url{http://www.nytimes.com/2006/11/12/business/12web.html?pagewanted=all}, abgerufen am 05.11.2014},
+	Journal = {The New York Times},
+	Month = {11},
+	Rating = {5},
+	Title = {Entrepreneurs See a Web Guided by Common Sense},
+	Year = {2006}}
+
+@misc{wp:semantik,
+	Date-Added = {2014-11-05 17:28:56 +0000},
+	Date-Modified = {2014-11-05 17:43:15 +0000},
+	Howpublished = {\url{http://de.wikipedia.org/wiki/Semantik}, abgerufen am 05.11.2014},
+	Month = {07},
+	Publisher = {Wikipedia},
+	Title = {Semantik},
+	Year = {2008},
+	Bdsk-Url-1 = {http://de.wikipedia.org/w/index.php?title=Semantik&oldid=48922000}}
 
 @book{alkhatib,
 	Author = {Ghazi Alkhatib},
@@ -19,9 +71,9 @@
 
 @article{taylor,
 	Annote = {https://www.asis.org/Publications/JASIS/Best_Jasist/1982Taylor.pdf},
-	Author = {Taylor},
+	Author = {Robert S. Taylor},
 	Date-Added = {2014-11-03 21:44:34 +0000},
-	Date-Modified = {2014-11-03 22:17:41 +0000},
+	Date-Modified = {2014-11-05 18:57:18 +0000},
 	Journal = {Journal of the American Society for Information Science},
 	Pages = {341--346},
 	Title = {Value--Added Processes in the Information Life Cycle},
@@ -38,9 +90,9 @@
 	Year = {2000}}
 
 @book{pnik,
-	Author = {Nikodemus},
+	Author = {Paul Nikodemus},
 	Date-Added = {2014-11-03 20:31:18 +0000},
-	Date-Modified = {2014-11-03 20:33:49 +0000},
+	Date-Modified = {2014-11-05 18:56:39 +0000},
 	Publisher = {Cuvillier Verlag},
 	Title = {Wissensmanagement und Innovation},
 	Year = {2005}}
