--- a/abkuerzungen.tex
+++ b/abkuerzungen.tex
@@ -3,18 +3,20 @@
 \begin{acronym}[\hspace{5cm}]
 	\acro{CAPTCHA}{Completely Automated Public Tourint Test to Tell Computers and Humans Apart}
 	\acro{CSS}{Cascading Style Sheets}
-	\acro{DoS}{Denial of Service}
 	\acro{DDoS}{Distributed Denial of Service}
+	\acro{DoS}{Denial of Service}
 	\acro{ERP}{Enterprise Resource Planning}
 	\acro{HTML}{Hypertext Markup Language}
-	\acro{HTTP}{Hypertext Tranfsfer Protocol}
 	\acro{HTTPS}{Hypertext Tranfsfer Protocol Secure}
+	\acro{HTTP}{Hypertext Tranfsfer Protocol}
+	\acro{IoT}{Internet of Things}
 	\acro{OWASP}{Open Web Application Security Project}
 	\acro{PDO}{PHP Data Objects}
 	\acro{SCM}{Supply Chain Management}
 	\acro{SQL}{Structured Query Language}
 	\acro{WWW}{World Wide Web}
 	\acro{XSS}{Cross Site Scripting}
+
 %%
 %	
 %	\acro{}{}
