Bedeutung der Daten

--- a/einstellungen.tex
+++ b/einstellungen.tex
@@ -1,5 +1,5 @@
 %Titel
-\newcommand*{\Titel}{Intranet der Dinge} 
+\newcommand*{\Titel}{Web 3.0 --- Das Öl des 21. Jahrhunderts} 
 
 %Betreff
 \newcommand*{\Betreff}{Assignment} 
@@ -26,7 +26,7 @@
 % Verzeichnisse (Wenn nicht benötigt, Zeile mit % auskommentieren oder löschen
 
 %% Abbildungsverzeichnis 
-%\listoffigurestrue
+\listoffigurestrue
 %% Tabellenverzeichnis
 %\listoftablestrue
 %% Abkürzungsverzeichnis
