--- a/schluss.tex
+++ b/schluss.tex
@@ -2,12 +2,9 @@
 
 \subsection{Fazit}
 
+In der Analogie zu Erdöl lassen sich die \buzz{Daten} wie in der These beschrieben mit Rohöl vergleichen. Die Techniken rund um \buzz{Big Data} gemeinsam mit den datenbankbezogenen Schichten des \buzz{semantischen Webs} entsprechen somit den Ölspeichern, welche den Rohstoff bereit halten. Die Weiterverarbeitung zu den verschiedenen Informations-- und Wissensprodukten erfolgt dann in den logischen Schichten des \buzz{Web 3.0}, welche somit am ehesten mit den Raffinerien vergleichbar sind, die aus den klebrigen schwarzen Rohöl der Daten die verschiedenen Informations-- und Wissensprodukte erzeugt. Ob diese dann mit schwerem Schiffsdiesel oder hocheffizientem Kerosin vergleichbar sind hängt sowohl von den Ausgangsdaten, aber auch wie beim Öl von den Zielsetzung und Anforderungen ab.
 
-Das Web 3.0 ist nicht das Öl des 21. Jahrhunderts. Es ist eher mit den Raffinerien vergleichbar, die aus den klebrigen schwarzen Rohöl der Daten die verschiedenen Informations-- und Wissensprodukte erzeugt. Ob diese dann mit schwerem Schiffsdiesel oder hocheffizientem Kerosin vergleichbar sind hängt sowohl von den Ausgangsdaten, aber auch wie beim Öl von den Zielsetzung und Anforderungen ab.
-
-In der Analogie zu Erdöl ließen sich somit die \buzz{Daten} mit Rohöl vergleichen, die Techniken rund um \buzz{Big Data} gemeinsam mit den datenbankbezogenen Schichten des \buzz{semantischen Webs} als die Ölspeicher, welche den Rohstoff bereit halten. Die Weiterverarbeitung zu den verschiedenen Informations-- und Wissensprodukten erfolgt dann in den logischen Schichten des \buzz{Web 3.0}, welche somit am ehesten mit den Raffinieriern vergleichbar sind.
-
-Datenschutz ist in diesem Bild vergleichbar mit Umweltschutz, der auf allen Ebenen dafür kämpft, dass die negativen Auswirkungen der neuen Technologie gemindert bzw. eliminiert werden. Wo beim Öl Strände, Seevögel, die Atmosphäre und das Klima geschützt werden, sind es  im Umfeld des \buzz{Webs} Bürger--, Grund-- und Persönlichkeitsrechte, die vor übermäßigem und falschem Einsatz der Technologie geschützt werden sollen.
+Datenschutz ist in diesem Bild vergleichbar mit Umweltschutz, der auf allen Ebenen dafür kämpft, dass die negativen Auswirkungen der neuen Technologie gemindert bzw. eliminiert werden. Wo beim Öl Strände, Seevögel, die Atmosphäre und das Klima geschützt werden, sind es  im Umfeld der Informationstechnologie Bürger--, Grund-- und Persönlichkeitsrechte, die vor übermäßigem und falschem Einsatz der Technologie geschützt werden sollen.
 
 \subsection{Ausblick}
 
