Auswirkungen auf die Gesellschaft

--- a/einleitung.tex
+++ b/einleitung.tex
@@ -11,9 +11,7 @@ Die steigende Menge der Daten macht eine systematische Aufbereitung der anfallen
 
 \textbf{Ziel dieser Arbeit ist es, die momentanen Entwicklungen der Datenbeständen hin zum semantischen Web und deren Auswirkungen auf Wirtschaft und Gesellschaft mit den durch die Industrielle Nutzung des Öls im 20. Jahrhundert zu vergleichen.}
 
-Hierzu werden zunächst im Kapitel~\myref{sec:grundlagen} die für diese Arbeit relevanten Begriffe und Konzepte definiert, bevor im Kapitel~\myref{sec:technologien} die momentan verfügbaren Technologien genannt und erklärt werden. 
-
-Darauf aufbauend werden im Kapitel~\myref{sec:herausforderungen} die technischen Probleme identifiziert, und Lösungsansätze skizziert. Im Kapitel~\myref{sec:potentiale} werden schließlich einige mit dem IoT erwachsenden Möglichkeiten beschrieben. 
+Hierzu werden zunächst im Kapitel~\myref{sec:grundlagen} die für diese Arbeit relevanten Begriffe und Konzepte definiert, bevor im Kapitel~\myref{sec:hauptteil} die Auswirkungen der Technologien auf Wirtschaft und Gesellschaft beschrieben werden.
 
 \todo{An die tatsächliche Arbeit anpassen}
 
