--- a/grundlagen.tex
+++ b/grundlagen.tex
@@ -43,8 +43,9 @@ Daraus kann auf politische Gesinnung, Musikgeschmack und/oder Trinkfreudigkeit v
 
 \begin{figure}[H]
 \begin{center}
-\includegraphics[width=0.4\textwidth]{layerCake-4.png}
-\caption{Der Stack des semantischen Web}
+\includegraphics[width=0.67\textwidth]{layerCake-4.png}
+\caption[Der Stack des semantischen Web]{Der Stack des semantischen Web\protect\footnotemark}
 \label{pic:tsemanticstack}
 \end{center}
 \end{figure}
+\footnotetext{\cite{w3cstack}, Seite 24}
