--- a/literatur.bib
+++ b/literatur.bib
@@ -2,12 +2,31 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Stefan Waidele at 2014-11-05 20:09:37 +0100 
+%% Created for Stefan Waidele at 2014-11-08 00:34:44 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{w3cstack,
+	Author = {Steve Bratt},
+	Date-Added = {2014-11-07 23:27:01 +0000},
+	Date-Modified = {2014-11-07 23:33:36 +0000},
+	Howpublished = {\url{http://www.w3.org/2007/Talks/0130-sb-W3CTechSemWeb/#(24)}, abgerufen am 07.11.2014},
+	Month = {01},
+	Title = {Semantic Web: Linked Data on the Web},
+	Year = {2007}}
+
+@book{d21,
+	Address = {Berlin},
+	Author = {{Initiative D21 et al. (Hrgb.)}},
+	Date-Added = {2014-11-07 22:25:48 +0000},
+	Date-Modified = {2014-11-07 23:18:19 +0000},
+	Publisher = {Initiative D21 e.V.},
+	Title = {Die Entwicklung der digitalen Gesellschaft in Deutschland},
+	Year = {2014},
+	Bdsk-Url-1 = {http://www.initiatived21.de/wp-content/uploads/2014/11/141103_digitalindex_web.pdf}}
 
 @book{web3pol,
 	Author = {Simon Pont},
@@ -22,8 +41,8 @@
 @book{web3market,
 	Author = {Michael Tasner},
 	Date-Added = {2014-11-05 18:39:00 +0000},
-	Date-Modified = {2014-11-05 18:50:01 +0000},
-	Edition = {Web--Edition},
+	Date-Modified = {2014-11-07 23:32:59 +0000},
+	Edition = {Web},
 	Month = {07},
 	Publisher = {FT Press},
 	Title = {The Limiting Factors of Web 2.0 and How Web 3.0 Is Different},
@@ -99,7 +118,8 @@
 
 @book{gartner2014,
 	Address = {{Stamford, CT, USA}},
-	Author = {{Burton et al.}},
+	Author = {{Betsy Burton et al.}},
+	Date-Modified = {2014-11-07 22:21:37 +0000},
 	Howpublished = {\url{http://www.gartner.com/doc/2816917?refval=&pcp=mpe}},
 	Publisher = {Gartner inc.},
 	Title = {{Gartner`s Hype Cycle Special Report for 2014}},
