Fazit und Ausblick

--- a/abkuerzungen.tex
+++ b/abkuerzungen.tex
@@ -10,6 +10,7 @@
 	\acro{HTTPS}{Hypertext Tranfsfer Protocol Secure}
 	\acro{HTTP}{Hypertext Tranfsfer Protocol}
 	\acro{IoT}{Internet of Things}
+	\acro{OLAP}{Online Analytical Processing}
 	\acro{OWASP}{Open Web Application Security Project}
 	\acro{PDO}{PHP Data Objects}
 	\acro{SCM}{Supply Chain Management}
