--- a/einstellungen.tex
+++ b/einstellungen.tex
@@ -1,5 +1,5 @@
 %Titel
-\newcommand*{\Titel}{Web 3.0 --- Das Öl des 21. Jahrhunderts} 
+\newcommand*{\Titel}{Daten sind das Öl des 21. Jahrhunderts} 
 
 %Betreff
 \newcommand*{\Betreff}{Assignment} 
