--- a/grundlagen.tex
+++ b/grundlagen.tex
@@ -35,11 +35,13 @@ Den vorhandenen oder neu gesammelten Daten kann auf verschiedene Arten Bedeutung
 
 In textbasierten Dateiformaten wie XML werden hingegen einzelne Elemente durch Markup--Tags maschinenlesbar mit Bedeutung versehen werden. So werden Zeichenketten als Namen, Adressen, Telefonnummer etc. identifizier-- und auswertbar. Die Meta--Daten sind hier Teil des Datenstroms.
 
-Durch Techniken wie Gesichtserkennung oder Textanalyse können Meta--Daten auch automatisch aus den Daten generiert werden. Hierbei bestimmt die Menge der auszuwertenden Daten und die Qualität der bereits vorhandenen Metadaten die Qualität der Ergebnisse.
+Durch Techniken wie Gesichtserkennung oder Textanalyse können Meta--Daten auch automatisch aus den Daten generiert werden. Hierbei bestimmt die Menge der auszuwertenden Daten und die Qualität der bereits vorhandenen Metadaten die Qualität der Ergebnisse. Die Ergebnisse werden attraktiver, je mehr die Entwicklung von \buzz{Big Data} zu \buzz{Big Information} und gar \buzz{Big Knowledge}\footnote{vgl. \cite{bigdikw}} geht\footnote{vgl. \cite{faz:inng}}.
 
 Durch Regelwerke, hinterlegte Logik, Verknüpfungen und standardisiertem Datenaustausch können aus den Informationen auch Wissen erzeugt werden:
 Person A ist auf einem Bild zusammen mit Person B zu sehen (Gesichtserkennung). Die Geoinformation und Uhrzeit (EXIF--Tags) zeigen, dass das Foto auf einer Veranstaltung aufgenommen wurde, das zu diesem Zeitpunkt an diesem Ort statt fand (Semantisches Markup der Veranstaltung).
 Daraus kann auf politische Gesinnung, Musikgeschmack und/oder Trinkfreudigkeit von Person A geschlossen werden.
+
+
 
 \begin{figure}[H]
 \begin{center}
