--- a/literatur.bib
+++ b/literatur.bib
@@ -2,12 +2,64 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Stefan Waidele at 2014-11-08 00:34:44 +0100 
+%% Created for Stefan Waidele at 2014-11-08 21:58:57 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{wp:stasi,
+	Author = {Wikipedia},
+	Date-Added = {2014-11-08 09:54:01 +0000},
+	Date-Modified = {2014-11-08 09:58:19 +0000},
+	Howpublished = {\url{http://de.wikipedia.org/wiki/Ministerium_f%C3%BCr_Staatssicherheit}},
+	Title = {Ministerium f{\"u}r Staatssicherheit},
+	Year = {2014}}
+
+@book{orwell,
+	Author = {George Orwell},
+	Date-Added = {2014-11-08 09:45:17 +0000},
+	Date-Modified = {2014-11-08 09:46:52 +0000},
+	Publisher = {{Secker \& Warburg}},
+	Title = {Nineteen Eighty-Four},
+	Year = {1949}}
+
+@misc{odnsbi,
+	Author = {Dan Hubbart},
+	Date-Added = {2014-11-08 06:32:26 +0000},
+	Date-Modified = {2014-11-08 06:33:44 +0000},
+	Howpublished = {\url{http://blog.opendns.com/2012/05/15/enough-about-big-data-lets-talk-big-information/}, abgerufen am 08.11.2014},
+	Month = {05},
+	Publisher = {OpenDNS},
+	Title = {Enough about Big Data. Let's talk Big Information},
+	Year = {2012}}
+
+@book{d21gov,
+	Author = {{Initiative D21 et al. (Hrgb.)}},
+	Date-Added = {2014-11-08 06:23:00 +0000},
+	Date-Modified = {2014-11-08 06:24:12 +0000},
+	Publisher = {Initiative D21 e.V.},
+	Title = {eGovernment Monitor 2014},
+	Year = {2014}}
+
+@misc{bigdikw,
+	Author = {Tom Graves},
+	Date-Added = {2014-11-07 23:51:13 +0000},
+	Date-Modified = {2014-11-07 23:52:09 +0000},
+	Howpublished = {\url{http://weblog.tetradian.com/2014/03/04/big-data-big-information-big-knowledge/}, abgerufen am 08.11.2014},
+	Month = {03},
+	Title = {Big-data, big-information, big-knowledge},
+	Year = {2014}}
+
+@misc{faz:inng,
+	Author = {Holger Schmidt},
+	Date-Added = {2014-11-07 23:48:10 +0000},
+	Date-Modified = {2014-11-07 23:49:04 +0000},
+	Howpublished = {\url{http://www.faz.net/aktuell/wirtschaft/netzwirtschaft/web-3-0-das-internet-der-naechsten-generation-1796817.html}, abgerufen am 08.11.2014},
+	Month = {05},
+	Title = {Das Internet der n{\"a}chsten Generation},
+	Year = {2009}}
 
 @misc{w3cstack,
 	Author = {Steve Bratt},
