Vergleich der Auswirkungen ohne Quellen

--- a/literatur.bib
+++ b/literatur.bib
@@ -2,12 +2,20 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Stefan Waidele at 2014-11-08 21:58:57 +0100 
+%% Created for Stefan Waidele at 2014-11-11 15:41:13 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{okg:tierpark,
+	Date-Added = {2014-11-11 14:01:21 +0000},
+	Date-Modified = {2014-11-11 14:03:08 +0000},
+	Howpublished = {\url{http://www.youtube.com/watch?v=Hay3d5g4_fI}, abgerufen am 11.11.2014},
+	Month = {06},
+	Title = {TV--Werbespot: Google Bonobo},
+	Year = {2014}}
 
 @misc{wp:stasi,
 	Author = {Wikipedia},
