--- a/hauptteil.tex
+++ b/hauptteil.tex
@@ -16,7 +16,7 @@ Schon heute drehen sich die meisten der regelmäßig ausgeführtem Aktivitäten 
 
 Unter den Top 10 der regelmäßig durchgeführten Tätigkeiten der Befragten im Web finden sich die informationsorientierten Tätigkeiten „nach Inhalten/Informationen suchen“ auf Platz eins, „über aktuelle Ereignisse des Wohnorts informieren“ auf Platz 6 und die Erfassung eigener Daten auf Platz 10\footnote{vgl. \cite{d21}, Seite 37}. Weitere Tätigkeiten wie „Soziale Netzwerke nutzen“ (Platz 7) bzw. „Online--Videos ansehen“ (Platz 3) sowie „Online--Shopping“ (Platz 2) nutzen Internetangebote, die per Design sehr gut mit Taxonomien, Meta--Daten und Verknüpfungen ausgestattet sind.
 
-In den TV--Werbespots von Google und Apple werden Verbraucher gezielt auf entsprechend Formulierte Anfragemöglichkeiten hingewiesen\footnote{z.B. „Ok Google, wie lange brauche ich nach Spandau?“}. Somit werden die Möglichkeiten wie Routenplanung, Musiktitelerkennung, Wettervorhersage und andere, die schon heute durch einzelne Anwendungen zur Verfügung gestellt werden in einer Oberfläche Gebündelt und in das Bewusstsein der Verbraucher gebracht.
+In den TV--Werbespots von Google und Apple werden Verbraucher gezielt auf entsprechend Formulierte Anfragemöglichkeiten hingewiesen\footnote{z.B. „Ok Google, zeig mir mal den schnellsten Weg in den Münchner Tierpark?“, \cite{okg:tierpark}}. Somit werden die Möglichkeiten wie Routenplanung, Musiktitelerkennung, Wettervorhersage und andere, die schon heute durch einzelne Anwendungen zur Verfügung gestellt werden in einer Oberfläche Gebündelt und in das Bewusstsein der Verbraucher gebracht.
 
 \label{probleme}
 Neben dem offensichtlichen Nutzen des \ac{WWW} bringt die Entwicklung des Webs auch negative Auswirkungen auf die Gesellschaft. 
@@ -28,8 +28,20 @@ Man kann davon ausgehen, dass mit weiter wachsenden Datenmengen, aber auch durch
 
 Schon heute haben Unternehmen erkannt, dass es nicht ausreicht, immer mehr Daten anzuhäufen. Der Schritt von \buzz{Big Data} zu \buzz{Big Information} bringt Benutzerfreundlichkeit und echten Mehrwert für Unternehmen\footnote{vgl. \cite{odnsbi}}. In großen Unternehmen wird unter den Schlagwort \buzz{Business Intelligence} bzw. \buzz{\ac{OLAP}} mit unterschiedlichen Technologien aus den im \buzz{Data Warehouse} gespeicherten Daten Informationen und informatives Wissen zu extrahieren, auf dem dann Entscheidungen und Handlungen basieren können. 
 
-Schon in der Vergangenheit haben Fortschritte in der Daten-- und Informationsbearbeitung erhebliche Auswirkungen auf die Wirtschaft gehabt. So war die Entwicklung der Telegraphie ein wichtiger Schritt für die Meteorologie, da hiermit zeitnahe Datensammlung und Auswertung möglich wurde. Als Resultat waren Wettervorhersagen für die Schiff{}fahrt möglich. Mit steigender Datenmenge und immer noch wachsender Verarbeitungsgeschwindigkeit werden im Zusammenspiel mit dem Fortschritten des semantischen Webs auch in anderen Bereichen immer treffendere Analysen und Vorhersagen möglich werden. Hier sind also auch erhebliche Auswirkungen auf die Wirtschaft zu erwarten.
+Schon in der Vergangenheit haben Fortschritte in der Daten-- und Informationsbearbeitung erhebliche Auswirkungen auf die Wirtschaft gehabt. So war die Entwicklung der Telegraphie ein wichtiger Schritt für die Meteorologie, da hiermit zeitnahe Datensammlung und Auswertung möglich wurde. Als Resultat waren Wettervorhersagen für die Schiff{}fahrt möglich. Mit steigender Datenmenge und immer noch wachsender Verarbeitungsgeschwindigkeit werden im Zusammenspiel mit dem Fortschritten des semantischen Webs auch in anderen Bereichen immer treffendere Analysen und Vorhersagen möglich werden. 
+
+Auch jenseits von Vorhersagen sind durch die Datenverarbeitung im großen Stil neue bzw. verbesserte Produkte möglich. Als Beispiele sind hier die Jacht „Oracle“ zu nennen, die durch Datenverarbeitung in Echtzeit zu einem hocheffizienten Segelschiff wurde\footnote{\todo{Quelle!}}, Herzschrittmacher, die Patientendaten beobachten um bei Bedarf als Defibrilator zu handeln\footnote{\todo{Quelle!}} oder der ganze Bereich der Ferndiagnostik und --wartung bei Maschinen\footnote{Stichwort: Internet of Things} --- und auch Menschen.
 
 Die wie auf Seite \pageref{probleme} beschriebenen, weit verbreiteten und zum Teil großen Befürchtungen stellen Herausforderungen an die Unternehmen dar. Neue Technologien und Anwendungen ebendieser sollten so entworfen und kommuniziert werden, dass Verbrauchen ihnen vertrauen können.
 
+Es sind also auch erhebliche Auswirkungen auf die Wirtschaft zu erwarten, sowohl durch Optimierung vorhandener Produkte und Dienstleitungen aber auch durch Neuentwicklungen.
+
 \subsection{Vergleich der Auswirkungen mit denen des Öls}
+
+Daten und Öl bilden die Grundlage für Produkte bzw. Dienstleistungen. Große Teile der Wirtschaft sind direkt von ihnen abhängig. Noch größer dürfte die indirekte Abhängigkeit vom Öl sein, die sich durch sämtliche Branchen und auch auf private Haushalte erstreckt. Eine solche Abhängigkeit ist für Daten bereits zu erahnen.
+
+Rohöl ist ein Rohstoff für verschiedene Produktarten wie z.B. Kunststoff, Schmierstoffe oder Treibstoffe. Auch wird es als Hilfs-- bzw. Betriebsstoff in der Industrie eingesetzt und macht so weitere Produkte möglich. Gleiches gilt für Daten: Oft sind die mit Hilfe künstlicher Intelligenz\footnote{im Englischen Wortsinn von Informationsbeschaffung} erzielten Informationen direkt das gewünschte Produkt. Andererseits könnten diese Informationen auch nur wie ein Betriebsstoff dafür sorgen, dass andere Prozesse besser ablaufen.
+
+Auch die Entwicklung der zur Verfügung stehenden Menge stellt sowohl beim Öl als auch bei Daten ein Problem dar: Während Ölvorkommen endlich sind, und somit nach Alternativen geforscht werden muss, werden Daten in ihrer Unendlichkeit\footnote{Mit jedem erfasstem Datum entstehen weitere erfassbare Daten, wie z.B. Speicherort} mit steigender Menge schwerer zu Verarbeiten. Somit muss die Wirtschaft lernen mit weniger Öl, aber mit mehr Daten zurechtzukommen.
+
+Eine weitere Gemeinsamkeit zeigt sich bei historischer Betrachtung: Sowohl Öl als auch Daten sind schon lange vor ihrer industriellen Nutzung entdeckt und genutzt worden. Dies gilt für Rohöl (z.B. als Bau und Brennstoff\footnote{\todo{Quelle!}}) als auch für Daten (z.B. zur Wetter und Flutvorhersage durch den hundertjärigen Kalender\footnote{\todo{Quelle!}} oder die frühen Verschlüselungstechniken\footnote{\todo{Quelle!}}). Jedoch bedurfte es einem bestimmten Stand der Technik, ab dem die Einsatzzwecke dann sprunghaft anstiegen.
